syntax = "proto3";

package category;

// Enum for error codes
enum ErrorCode {
  UNKNOWN = 0; // Unknown error
  CATEGORY_NOT_FOUND = 1; // Category not found
  CATEGORY_ALREADY_EXISTS = 2; // Category already exists
  INVALID_REQUEST = 3; // Invalid request
}